Fri Mar 18 00:15:05 2016  Yusuke Endoh  <mame@ruby-lang.org>

	* numeric.c (num_step): use rb_equal for zero check. rb_num_coerce_cmp
	  created an object which caused extra overhead.

Thu Mar 17 22:21:34 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (RB_GC_GUARD_PTR): remove intermediate
	  macro, and expand for each RB_GC_GUARD.  [Fix GH-1293]

Thu Mar 17 22:08:33 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_specialized_instruction): move specialization
	  for opt_newarray_max/min from translation phase.

Thu Mar 17 21:52:09 2016  Yusuke Endoh  <mame@ruby-lang.org>

	* array.c, enum.c: make rdoc format consistent.

Thu Mar 17 21:47:57 2016  Yusuke Endoh  <mame@ruby-lang.org>

	* NEWS: add Array#max, #min, and the optimization.  [Feature #12172]

Thu Mar 17 21:45:02 2016  Yusuke Endoh  <mame@ruby-lang.org>

	* compile.c (NODE_CALL): add optimization shortcut for Array#max/min.
	  Now `[x, y].max` is optimized so that a temporal array object is not
	  created in some condition.  [Feature #12172]

	* insns.def (opt_newarray_max, opt_newarray_min): added.

Thu Mar 17 21:35:52 2016  Yusuke Endoh  <mame@ruby-lang.org>

	* array.c (rb_ary_max, rb_ary_min): implement Array#max and min with
	  arguments.  replace super call with rb_nmin_run.

	* enum.c (nmin_run): exported (as rb_nmin_run).

	* internal.h: added a prototype for rb_nmin_run.

Thu Mar 17 21:24:52 2016  Yusuke Endoh  <mame@ruby-lang.org>

	* array.c (rb_ary_max, rb_ary_min): implement a block by itself instead
	  of delegating Enumerable#max/min.

Thu Mar 17 21:09:34 2016  Yusuke Endoh  <mame@ruby-lang.org>

	* array.c (rb_ary_max, rb_ary_min): Array#max and Array#min added.
	  [Feature #12172]

	* internal.h (OPTIMIZED_CMP): moved from enum.c so that array.c can
	  use it.

	* test/ruby/test_array.rb (test_max, test_min): tests for Array#max
	  and Array#min.

	* test/ruby/test_enum.rb (test_max, test_min): revised a bit to test